syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ojasare.order.service";

service OrderService {
  rpc CreateOrder (OrderRequest) returns (OrderResponse);
}

message OrderRequest {
  string order_id = 1;
  string skuCode = 2;
  int32 quantity = 3;
  double price = 4;
}

message OrderResponse {
  string order_id = 1;
  string status = 2;
}